# graphics_algorithms

./: CMakeLists.txt  CompositeNode.cpp  CompositeNode.h  Connection.h  Graph.cpp  Graph.h  IVna.h  MethodNodeFactoryHybrid.h  NodeContext.h  NodePort.cpp  NodePort.h  README.md  main.cpp  node.cpp  node.h  nodefactory.cpp  nodefactory.h  workflowexecutor.cpp  workflowexecutor.h  workflowview.cpp  workflowview.h
gui/: EdgeItem.cpp  EdgeItem.h  GraphItem.cpp  GraphItem.h  NodeItem.cpp  NodeItem.h  WorkflowView.cpp  connectionitem.cpp  connectionitem.h  mainwindow.cpp  mainwindow.h  nodeitem.cpp  nodeitem.h  portitem.cpp  portitem.h  propertieswidget.cpp  propertieswidget.h  workflowview.h
logic/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Port.cpp  Port.h  node.cpp  node.h
